--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -37,8 +37,10 @@
 :root {
   --bg-color: #ffffff;
   --text-color: #333333;
+  --link-color: #fff;
   --border-color: #dddddd;
-  --primary-color: #3498db;
+  --primary-color: #0859ed;
+  --nav-bg: #0859ed;
 }
 
 /* 基础样式 */
@@ -77,9 +79,9 @@ body {
 
 /* 网站头部 */
 .site-header {
-  background: linear-gradient(288deg, hsla(0, 0%, 100%, .188235) -2.45%, hsla(0, 0%, 100%, 0) 155.03%);
-  backdrop-filter: blur(1rem);
-  box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+  background:var(--nav-bg);
+  backdrop-filter: blur(2rem);
+  /* box-shadow: 0 2px 4px rgba(0,0,0,.1); */
   position: sticky;
   top: 0;
   z-index: 100;
@@ -159,7 +161,7 @@ body {
 .menu-button span {
   width: 25px;
   height: 3px;
-  background-color: #333;
+  background-color: #fff;
   margin: 3px 0;
   transition: 0.3s;
   border-radius: 2px;
@@ -184,15 +186,15 @@ body {
 
 .nav-link {
   text-decoration: none;
-  color: #333;
-  font-weight: 500;
+  color: rgba(255, 255, 255, .7);
+  /* font-weight: 500; */
   transition: color 0.2s ease;
   display: block;
   padding: 0.5rem 0;
 }
 
 .nav-link:hover {
-  color: #333;
+  color: #fff;
 }
 
 /* 导航下拉菜单样式 */
@@ -202,7 +204,7 @@ body {
 }
 
 .dropdown-toggle::after {
-  content: "▼";
+  content: "\25BC";
   font-size: 0.7em;
   margin-left: 0.5em;
   vertical-align: middle;
@@ -1047,7 +1049,7 @@ th {
     top: 100%;
     left: 0;
     width: 100%;
-    background-color: #fff;
+    background-color:var(--nav-bg);;
     box-shadow: 0 2px 4px rgba(0,0,0,0.1);
     display: none;
     z-index: 100;
