--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -40,7 +40,9 @@
   --link-color: #fff;
   --border-color: #dddddd;
   --primary-color: #0859ed;
-  --nav-bg: #0859ed;
+  --vivid-blue: #0859ed;
+  --Bright-violet: #bd34fe;
+  --bright-blue: #5834fe;
 }
 
 /* 基础样式 */
@@ -79,7 +81,7 @@ body {
 
 /* 网站头部 */
 .site-header {
-  background:var(--nav-bg);
+  background:linear-gradient(to right, var(--vivid-blue), var(--Bright-violet));
   backdrop-filter: blur(2rem);
   /* box-shadow: 0 2px 4px rgba(0,0,0,.1); */
   position: sticky;
@@ -282,26 +284,29 @@ body {
 
 .search-input {
   padding: 0.5rem;
-  border: 1px solid #ddd;
-  border-radius: 4px 0 0 4px;
+  border: none;
+  border-radius:0;
   font-size: 0.9rem;
   width: 100%;
-  max-width:300px;
+  min-width:360px;
 }
 
 .search-button {
-  background-color: #333;
+  background-color:var(--Bright-violet);
   color: white;
   border: none;
-  border-radius: 0 4px 4px 0;
+  border-radius: 0 ;
   padding: 0.5rem 0.75rem;
-  margin-left: -2.3rem;
+  margin-left: -2.4rem;
   cursor: pointer;
   transition: background-color 0.2s ease;
 }
-
+.search-button i{
+  font-size: 1.2rem;
+  font-weight: 800;
+}
 .search-button:hover {
-  background-color: #666;
+  background-color:var(--bright-blue);
 }
 
 /* Rollbar 悬浮工具栏 */
@@ -428,7 +433,7 @@ body {
 }
 
 .hero h1 {
-  font-size: 2.5rem;
+  font-size: 3rem;
   margin-bottom: 1rem;
   text-shadow: 1px 1px 2px rgba(0,0,0,0.5);
 }
