style(styles): 调整搜索输入框宽度
- 将搜索输入框的最大宽度改为最小宽度
- 将最大宽度720px改为最小宽度460px
- 确保在不同屏幕尺寸下搜索框显示更合理

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1088,7 +1088,7 @@ th {
  
   .search-input {
     width: 100%;
-    max-width:720px;
+    min-width:460px;
   }
   /* 移动端隐藏Rollbar */
   .rollbar {
