--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -831,6 +831,83 @@ width: 100%;
   font-size: 0.9rem;
 }
 
+/* 模型详情页面 */
+.model-detail {
+  display: grid;
+  grid-template-columns: 1fr 2fr;
+  grid-template-rows: auto auto;
+ gap: 1rem;
+  width: 100%; /* 容器总宽度 */
+
+}
+.model-detail h1 {
+  text-align: center;
+  margin-bottom: 1rem;
+  color: #2c3e50;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+
+}
+
+.model-meta {
+   text-align: center;
+  color: #7f8c8d;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  margin-top: 3rem;
+}
+
+.model-image {
+ width: 100%;
+  grid-column: 1 / 2;
+  grid-row: 1 / 2;
+  object-fit: contain;
+}
+.model-content {
+  line-height: 1.8;
+  grid-column: 1 / 3;
+  grid-row: 2 / 3;
+
+}
+.model-content img {
+  width: 90%;
+  height: auto;
+}
+/* 确保Markdown加粗文本正确渲染 */
+.model-content strong,
+.model-content b {
+  font-weight: bold;
+}
+/* 标签样式 */
+.model-tags {
+   text-align: center;
+  margin-bottom: 1rem;
+  grid-column: 2 / 3;
+  grid-row: 1 / 2;
+  margin-top: 5rem;
+}
+.model-tags h3 {
+  margin: 0 0 0.5rem 0;
+  font-size: 1rem;
+  color: #2c3e50;
+}
+
+.tag-list {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  gap: 0.5rem;
+}
+
+.tag {
+  display: inline-block;
+  background-color: #333;
+  color: white;
+  padding: 0.3rem 0.6rem;
+  border-radius: .5rem;
+  font-size: 0.9rem;
+}
+
 /* 侧边栏样式 */
 .sidebar {
   background-color: #fff;
