--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -20,7 +20,7 @@ const description = '抱歉，您访问的页面不存在。';
       <div class="error-navigation">
         <h3>快速导航</h3>
         <ul class="error-nav-list">
-          <li><a href="/portfolio">作品集</a></li>
+          <li><a href="/models">模型</a></li>
           <li><a href="/tools">工具</a></li>
           <li><a href="/warehouse">仓库</a></li>
           <li><a href="/notes">笔记</a></li>
