--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -411,11 +411,20 @@ width: 100%;
 /* 章节标题 */
 .section-title {
   text-align: center;
+  font-size: 1.8rem !important;
   margin-bottom: 1rem;
   line-height: 3;
   color: #2c3e50;
 }
-
+.section-title::after {
+  position: relative;
+  content: "——";
+  color: var(--vivid-blue);
+  display: block;
+  width: 100%;
+  height: 2px !important;
+ top: -4.5rem !important;
+}
 /* 英雄区域 */
 .hero {
  
@@ -542,8 +551,10 @@ width: 100%;
   text-decoration: none;
   font-weight: 500;
   background-color: #333;
-  border-radius: .5rem;
-  width: 8rem;
+  border-radius: 1rem;
+  padding: 0.25rem 1rem;
+  max-width:10rem;
+  white-space: nowrap;
   line-height:2.5;
   margin:1rem auto 0 auto;
   
@@ -573,7 +584,7 @@ width: 100%;
 
 .about-image {
   flex: 1;
-  max-width: 300px;
+  max-width:200px;
 }
 
 .about-image img {
