增加 section-title 下划线长度

--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -418,7 +418,7 @@ width: 100%;
 }
 .section-title::after {
   position: relative;
-  content: "——";
+  content: "————";
   color: var(--vivid-blue);
   display: block;
   width: 100%;
