--- a/src/pages/models/[...slug].astro
+++ b/src/pages/models/[...slug].astro
@@ -1,5 +1,6 @@
 ---
 import ContentLayout from '../../layouts/ContentLayout.astro';
+import Comments from '../../components/Comments.astro';
 import { getCollection, getEntry, render } from 'astro:content';
 import type { CollectionEntry } from 'astro:content';
 
@@ -134,6 +135,8 @@ const popularTags = Array.from(tagCounts.entries())
     <div class="model-content">
       <Content />
     </div>
+    
+    <Comments />
   </article>
 </ContentLayout>
 
