更新Comments组件中的repoId为正确的仓库ID

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -13,7 +13,7 @@ const { term = '', category = '' } = Astro.props;
   <h2>评论</h2>
   <giscus-widget
     repo="Gautown/blenderdp"
-    repoId="YOUR_REPO_ID"
+    repoId="R_kgDOQcA4pw"
     category="Announcements"
     categoryId="YOUR_CATEGORY_ID"
     mapping="pathname"
