--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -13,14 +13,18 @@ const { term = '', category = '' } = Astro.props;
   <h2>评论</h2>
   <giscus-widget
     repo="Gautown/blenderdp"
-    repoId="R_kgDOQcA4pw"
-    category="Announcements"
-    categoryId="YOUR_CATEGORY_ID"
+    repo-id="R_kgDOQcA4pw"
+    category="General"
+    category-id="DIC_kwDOQcA4p84CztQg"
     mapping="pathname"
     term={term}
     theme="light"
-    reactionsEnabled="1"
-    emitMetadata="0"
+    reactions-enabled="1"
+    emit-metadata="0"
+    input-position="bottom"
+    lang="zh-CN"
+    crossorigin="anonymous"
+    async
   />
 </div>
 
