--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -11,21 +11,21 @@ const { term = '', category = '' } = Astro.props;
 
 <div class="comments-section">
   <h2>评论</h2>
-  <giscus-widget
-    repo="Gautown/blenderdp"
-    repo-id="R_kgDOQcA4pw"
-    category="General"
-    category-id="DIC_kwDOQcA4p84CztQg"
-    mapping="pathname"
-    term={term}
-    theme="light"
-    reactions-enabled="1"
-    emit-metadata="0"
-    input-position="bottom"
-    lang="zh-CN"
-    crossorigin="anonymous"
-    async
-  />
+<script src="https://giscus.app/client.js"
+        data-repo="Gautown/blenderdp"
+        data-repo-id="R_kgDOQcA4pw"
+        data-category="Announcements"
+        data-category-id="DIC_kwDOQcA4p84CztQg"
+        data-mapping="pathname"
+        data-strict="1"
+        data-reactions-enabled="1"
+        data-emit-metadata="0"
+        data-input-position="top"
+        data-theme="light"
+        data-lang="zh-CN"
+        crossorigin="anonymous"
+        async>
+</script>
 </div>
 
 <style>
