移除评论组件中的 gsc-reactions 容器

--- a/src/components/Comments.astro
+++ b/src/components/Comments.astro
@@ -42,4 +42,7 @@ const { term = '', category = '' } = Astro.props;
     margin-bottom: 1rem;
     color: #333;
   }
+  .gsc-reactions {
+    display: none;
+  }
 </style>
