--- a/public/styles/global.css
+++ b/public/styles/global.css
@@ -1113,7 +1113,10 @@ th {
   background-color: #f8f9fa;
   font-weight: 600;
 }
-
+/* 评论区 */
+  .gsc-reactions {
+    display: none;
+  }
 /* 响应式断点 - 移动端 ( <= 768px ) */
 @media (max-width: 768px) {
   .header-container {
